GNOME Bugzilla – Bug 771104
element: seek_simple() does not reset stop position
Last modified: 2016-09-30 07:05:04 UTC
When using seek_simple() in combination with other kinds of seeks, this becomes problematic. seek_simple() does not reset the stop position to GST_CLOCK_TIME_NONE but keeps whatever a previous seek did. So for example when doing a seek_simple() after a rate=-1 seek, we would usually get assertions that start>stop (and stop being the old stop from the rate=1 seek). Attached patch fixes that but also slightly changes behaviour, shouldn't break anything that worked before though.
Created attachment 335159 [details] [review] element: Reset the stop position to NONE in seek_simple() When using seek_simple() in combination with other kinds of seeks, this becomes problematic. seek_simple() does not reset the stop position to GST_CLOCK_TIME_NONE but keeps whatever a previous seek did. So for example when doing a seek_simple() after a rate=-1 seek, we would usually get assertions that start>stop (and stop being the old stop from the rate=1 seek).
Attachment 335159 [details] pushed as 1b7ab25 - element: Reset the stop position to NONE in seek_simple()